# pong

./: .clang-format  .clangd  .cmake-format  CMakeLists.txt  CMakePresets.json  README.md
src/: ball.c  ball.h  game.c  game.h  input.c  input.h  main.c  paddle.c  paddle.h  screen.c  screen.h
src/screens/: ending.c  gameplay.c  title.c
